--- a/BicyclePartPicker/Views/Bicycles/Index.cshtml
+++ b/BicyclePartPicker/Views/Bicycles/Index.cshtml
@@ -68,6 +68,7 @@
 @section Scripts{
     <script>
         $(document).ready(function () {
+            $('#SelectedMakeId').val(0);
             getModelByMakeId();
             getVersionByModelId();
         });
